# src/routes/user.routes.ts
@@ -22,7 +22,25 @@ router.post(
       }
 
   */
-  userController.UpdateProfileData
+  userController.UpdateProfileData,
 );
 
+router.post(
+  "/get-profile",
+
+  /*  #swagger.tags = ['3.USER']
+      #swagger.summary = 'Get Profile'
+      #swagger.description = 'GET PROFILE DATA'
+
+      #swagger.parameters['body'] = {
+        in: 'body',
+        required: true,
+        schema: {
+          user_id : "USR1782371436810602"
+        }
+      }
+
+  */
+  userController.GetProfileData,
+);
 export default router;
